--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Imports:
     datasets,
     shinythemes,
     stringr,
-    pkgload
+    pkgload,
+    plumber
 Depends:
   shiny,
   shinydashboard
